add front end logic to triangle tracker

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>Triangle Tracker</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Triangle Tracker</h1>
+      <p>Please enter 3 numbers, which represent the lengths of the sides of a triangle, and we will tell you what type of triangle they make.</p>
+      <form id="tracker">
+        <input type="text" id="side1">
+        <input type="text" id="side2">
+        <input type="text" id="side3">
+        <button type="submit" class="btn btn-info">Track Triangle</button>
+        <div id="triangleContent"></div>
+
+      </form>
+    </div>
 
   </body>
 </html>
